# siml-core

./: .gitignore  Cargo.toml  README.md
fbs/: action.fbs  handshake.fbs  message.fbs  perception.fbs  position.fbs  siml.fbs
src/: lib.rs  main.rs  plugin.rs  socket.rs  transport.rs
src/eden/: clock.rs  context.rs  field.rs  grid.rs  light_state.rs  microbiome.rs  mod.rs  star.rs  star_thread.rs  utils.rs
tests/: integration_test.rs  messages_tests.rs  multi_agent_test.rs  scaling_test.rs
tests/helpers/: agent_stub.rs  env_stub.rs  mod.rs
